Beta v0.01.70
系統-共用模組(報告) : 修正 最多資料筆數為10000
系統-請求模組 : 修正 每1.5秒 請求緩衝配置
系統-寄信模組 : 修正 SMTP socket 連線ticket配置
產品-異動紀錄 : 添加 標記立即導入
產品-異動通知 : 添加 立即導入相關製令單
產品-異動通知 : 添加 立即導入通知選項
產品-異動通知 : 添加 比對 內容文字差異
產品-異動通知 : 添加 立即導入[急] 信件標題
產品-產品管理 : 添加 修改時 詢問是否立即導入

生管-生產注意事項 : 修正 換行跑板問題
製造-流程卡 : 修正 打印觸發機制